# OthelloSkynet

./: .gitignore  :w  ;  CMakeLists.txt  README.md  benchmark.sh  o.txt
artigos/: links.txt
includes/: avals.cpp  board.h  bot_builders.cpp  coord.h  cpuplayer.h  game.h  mcts.h  player.h  treenode.h
mail_validation_and_ranking/: generate_key.php  index.php  rankings.php  sendmail.php  validate_key.php  verify_key.php
php_mail_validation/: generate_key.php  login_key.php  scores.json  store_score.php  users.json  validate_key.php  verify_key.php
profiles/: callgrind.out.8-beta  callgrind.out.8-no-beta  callgrind.out.fast-maybe  callgrind.out.faster-maybe  callgrind.out.instant-test  callgrind.out.loop  callgrind.out.mcts_stall  callgrind.out.no-clone  callgrind.out.no-reserve  callgrind.out.opt-2  callgrind.out.opt-att  callgrind.out.opt-atttempt  callgrind.out.opt-me  callgrind.out.stall  callgrind.out.stall-no-from  callgrind.out.with-reserve  no-Skynet
src/: board.cpp  game.cpp  gamereader.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  main_term.cpp  player.cpp
src/modules/: board.cpp  coord.cpp  cpuplayer.cpp  game.cpp  minmaxplayer.cpp  player.cpp  treenode.cpp
templates/: board.html  end-game.html  game-info.html  game.html  index.html  intro.html  leaderboard.html
